Bug 1638773: Allow initial-scale clamping when user-scalable=no, add WPT. r=hiro, a=RyanVM

This corrects the handling of user-scalable=no to first clamp scale (whether
specified or default) between min and max scales, then applies the resulting
value to initial-scale, min and max.

Differential Revision: https://phabricator.services.mozilla.com/D76056